# Emotional_Speech_Generator

./: README.md  pyproject.toml
Data-generation/: BgRemover.py  EmotClassifier.py  TransAudioGen.py  classify_unlabelled.py  clip_generator.py  generate_unlabelled_clips.py  pyproject.toml
Data-generation/Synthetic_neutral_audio/transcripts/anger/: 0.96_1207_Well_I_wouldnt_call_it_that_cleaned.txt  0.96_1212_San_Fran_Stinktown_cleaned.txt  0.96_580_Thank_you_Riley_cleaned.txt  0.96_878_Wait_Hey_Wait_cleaned.txt  0.97_182_And_the_desk_over_there_cleaned.txt  0.97_295_Whoohoo_cleaned.txt
Data-generation/character_audio_clips/ANGER/transcripts/: anger_clip_1.txt  anger_clip_10.txt  anger_clip_11.txt  anger_clip_12.txt  anger_clip_2.txt  anger_clip_3.txt  anger_clip_4.txt  anger_clip_5.txt  anger_clip_6.txt  anger_clip_7.txt  anger_clip_8.txt
Data-generation/character_audio_clips/DISGUST/transcripts/: disgust_clip_1.txt  disgust_clip_10.txt  disgust_clip_11.txt  disgust_clip_2.txt  disgust_clip_3.txt  disgust_clip_4.txt  disgust_clip_5.txt  disgust_clip_6.txt  disgust_clip_7.txt  disgust_clip_8.txt  disgust_clip_9.txt
Data-generation/character_audio_clips/FEAR/transcripts/: fear_clip_1.txt  fear_clip_10.txt  fear_clip_11.txt  fear_clip_12.txt  fear_clip_13.txt  fear_clip_14.txt  fear_clip_15.txt  fear_clip_16.txt  fear_clip_17.txt  fear_clip_18.txt  fear_clip_19.txt  fear_clip_2.txt  fear_clip_20.txt  fear_clip_21.txt  fear_clip_3.txt  fear_clip_4.txt  fear_clip_5.txt  fear_clip_6.txt  fear_clip_7.txt  fear_clip_8.txt  fear_clip_9.txt
(+77 files in other folders)
